# paradapp-iPoW

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  config.example.yml  docker-compose.yml  dockerfile  iPoWParadappV1.sol  mise.toml  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/routes/: mod.rs  tx_limit.rs
crates/chains/evm/: Cargo.toml  gen_abi_evm.rs
crates/chains/evm/abi/: ParadappConvert.abi
crates/chains/evm/src/: approve.rs  approving_adapter.rs  convert.rs  converting_adapter.rs  evm_provider.rs  evm_stack.rs  helper.rs  lib.rs  network.rs  stack.rs  streaming.rs  streaming_adapter.rs
crates/chains/evm/src/bindings/: mod.rs  paradapp_convert.rs
crates/chains/evm/src/common/: mod.rs
crates/chains/evm/src/dependencies/: config.rs  context.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  conversion_type.rs  lib.rs  tracing.rs
crates/core/src/btc/: btc.rs  btc_service.rs  mod.rs
crates/core/src/consts/: mod.rs  supported_network_enum.rs  transaction_phase.rs  transaction_type.rs
crates/core/src/dependencies/: config.rs  context.rs  mod.rs
crates/core/src/dependencies/db/: redis.rs
crates/core/src/models/: conversion.rs
crates/core/src/traits/: approving.rs  approving_adapter.rs  chain_helper_adapter.rs  chain_provider_adapter.rs  chain_stack.rs  converting_adapter.rs  interop_resolver.rs  mod.rs  streaming.rs  streaming_adapter.rs
crates/operator/: Cargo.toml
crates/operator/src/: bridge_operator.rs  chain_operator.rs  local_operator.rs  main.rs  registry.rs
crates/operator/src/common/: mod.rs
crates/operator/src/common/approving/: approving.rs  approving_bot.rs  approving_orchestrator.rs  bot.rs  mod.rs
crates/operator/src/common/converting/: bot.rs  converting.rs  converting_bot.rs  mod.rs  (+1 more)
crates/operator/src/runtime/: ethereum.rs  ethereum_run.rs  hedera.rs  hedera_run.rs  mod.rs
(+14 files in other folders)
