[package]
name = "paradapp-operator-api"
version = "0.1.0"
edition = "2024"

[dependencies]
paradapp-chain-evm = { path = "../chains/evm" }
axum = "0.8.8"
tokio = "1.49.0"
serde = "1.0.228"
serde_json = "1.0.149"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

