[package]
name = "paradapp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bip32 = "0.5.3"
bitcoin = "0.32.8"
dotenvy = "0.15.7"
ethers = "2.0.14"
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.10"
tracing-appender = "0.2.4"
tracing-attributes = "0.1.31"
tracing-log = "0.2.0"
async-trait = "0.1.89"
serde = "1.0.228"
pbkdf2 = "0.12.2"
